--- a/react-app/src/components/Navigation/GuestNav.css
+++ b/react-app/src/components/Navigation/GuestNav.css
@@ -5,7 +5,7 @@
   background-size: cover;
   height: 80vh;
   min-height: 500px;
-  width: 100vw;
+  width: 100%;
 }
 
 #guest-nav {
@@ -48,9 +48,9 @@
   color: rgb(212, 212, 212);
   display: flex;
   flex-direction: column;
-  height: inherit;
+  /* height: inherit; */
   justify-content: center;
-  margin-top: 75px;
+  /* margin-top: 75px; */
   padding: 0 20px;
   position: relative;
   min-height: 500px;
